feature  pair of Students whose sum is equal to target