@@ -1,17 +1,22 @@
 package com.example.sb_assign_16_05_23.service.impl;
 
+import com.example.sb_assign_16_05_23.dto.Pair;
 import com.example.sb_assign_16_05_23.dto.StudentDTO;
 import com.example.sb_assign_16_05_23.entity.Student;
+import com.example.sb_assign_16_05_23.errors.BadRequestException;
 import com.example.sb_assign_16_05_23.errors.NotFoundException;
 import com.example.sb_assign_16_05_23.repository.StudentRepository;
 import com.example.sb_assign_16_05_23.service.StudentService;
 import org.modelmapper.ModelMapper;
 import org.modelmapper.TypeToken;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 
 @Service
 public class StudentServiceImpl implements StudentService {
@@ -25,17 +30,15 @@ public class StudentServiceImpl implements StudentService {
     @Override
     public List<StudentDTO> getAllStudents() {
         List<Student> students = studentRepository.findAll();
-        if (students.isEmpty()) {
-            return null;
-        }
-        return students.stream().map(student -> mapper.map(student, StudentDTO.class)).collect(Collectors.toList());
-
+        if (students.isEmpty()) throw new NotFoundException("Student list is empty");
+        return students.stream().map(student -> mapper.map(student, StudentDTO.class)).toList();
     }
 
 
     @Override
     public List<StudentDTO> registerStudentList(List<StudentDTO> studentDtos) {
-        List<Student> students = calculateRank(studentDtos);
+        List<Student> newStudent = studentDtos.stream().map(s -> mapper.map(s, Student.class)).toList();
+        List<Student> students = calculateRank(newStudent);
         List<StudentDTO> newStudentDtos = new ArrayList<>();// return the dtos List with allocated id and rank
 
         students.forEach(s -> {
@@ -50,16 +53,22 @@ public class StudentServiceImpl implements StudentService {
 
     // recalculate rank
     @Override
-    public List<Student> calculateRank(List<StudentDTO> studentDtos) {
-        List<Student> students = studentRepository.findAll(); // get student list sorted by marks
-        students.addAll(studentDtos.stream() // add the new list
-                .map(s -> mapper.map(s, Student.class)) // map dto to entity class
-                .collect(Collectors.toList()));
+    public List<Student> calculateRank(List<Student> newStudent) {
+        double highest = newStudent.stream().max((s1, s2) -> s1.getMarks().compareTo(s2.getMarks())).get().getMarks();
 
-        Collections.sort(students, (s1, s2) -> s2.getMarks().compareTo(s1.getMarks())); // add and sort the students list
+        // list of students having marks smaller than given dto list(highest marks)
+        List<Student> students = studentRepository.findAllByMarksLessThanEqualOrderByMarksDesc(highest);
+
+        // if students list have no marks smaller than dto's highest marks
+        Student filterStudent = students.isEmpty() ? studentRepository.findFirstByOrderByMarks() : null;
+
+        int ifRank = filterStudent != null ? filterStudent.getStudentRank() + 1 : 1; // if both list is empty than rank=1
+        int j = (students.isEmpty() ? ifRank : students.get(0).getStudentRank());
+
+        students.addAll(newStudent);
+        students.sort((s1, s2) -> s2.getMarks().compareTo(s1.getMarks()));
 
         Map<Double, Integer> mappingList = new HashMap<>();
-        int j = 1;
 
         for (Student student : students) { // set the map
             double marks = student.getMarks();
@@ -72,24 +81,13 @@ public class StudentServiceImpl implements StudentService {
             if (mappingList.containsKey(marks)) student.setStudentRank(mappingList.get(marks));
         });
         return students;
-
     }
 
     @Override
     public StudentDTO updateStudent(StudentDTO studentDTO) {
-
-        Student existingStudent = studentRepository.findById(studentDTO.getId())
-                .orElseThrow(() -> new NotFoundException("Student not found with id " + studentDTO.getId()));
-
+        Student existingStudent = studentRepository.findById(studentDTO.getId()).orElseThrow(() -> new NotFoundException("Student not found with id " + studentDTO.getId()));
         mapper.map(studentDTO, existingStudent);
-        System.out.println(existingStudent);
-
-        List<Student> studentList = studentRepository.findAll();
-        TypeToken<List<StudentDTO>> typeToken = new TypeToken<>() {
-        };
-        List<StudentDTO> studentDTOList = mapper.map(studentList, typeToken.getType());
-        List<Student> students = calculateRank(studentDTOList);
-
+        calculateRank(studentRepository.findAll());
         studentRepository.save(existingStudent);
         TypeToken<StudentDTO> token = new TypeToken<>() {
         };
@@ -98,4 +96,47 @@ public class StudentServiceImpl implements StudentService {
 
     }
 
+    @Override
+    public List<StudentDTO> sortAccordingToRank() {
+        List<Student> stud = studentRepository.findAllByOrderByStudentRank();
+        if (stud.isEmpty())
+            throw new NotFoundException("Student table is empty.");
+        return stud.stream()
+                .map(student -> mapper.map(student, StudentDTO.class))
+                .toList();
+    }
+
+    @Override
+    public List<StudentDTO> sortAccordingTo(String sortField) {
+        Sort sortedByField = Sort.by(sortField);
+        List<Student> students = studentRepository.findAll(sortedByField);
+        if (students.isEmpty())
+            throw new NotFoundException("Student table is empty.");
+        return students.stream()
+                .map(student -> mapper.map(student, StudentDTO.class))
+                .toList();
+    }
+
+    @Override
+    public List<Pair<String>> getStudentPairEqualsToSum(Double target) {
+        // Getting all the students form DB
+        List<StudentDTO> studentDTOList = getAllStudents();
+        // Checking Edge Case Here
+        Double sum = studentDTOList.stream().map(StudentDTO::getMarks).reduce((double) 0, Double::sum);
+        if (target > sum) throw new BadRequestException("Target Should be less then 1200");
+        List<Pair<String>> pairList = new ArrayList<>();
+        Map<Double, String> map = new HashMap<>();
+
+        for (StudentDTO student : studentDTOList) {
+            Double remainTarget = target - student.getMarks();
+            if (map.containsKey(remainTarget)) {
+                pairList.add(new Pair<>(map.get(remainTarget), student.getStudentName()));
+            }
+            map.put(student.getMarks(), student.getStudentName());
+        }
+        if (pairList.isEmpty()) {
+            throw new NotFoundException("There is no pair of Students whose sum is equal to " + target);
+        }
+        return pairList;
+    }
 }
